# hs_data_engineering_banking

./: .env  .gitignore  README.md  compose.override.yaml  compose.yaml  docker-compose.yml  dockerfile  pyproject.toml
airflow/dags/: etl_10m_pg_to_ch.py
db/: schema.sql
infra/postgres/init/: 001_schema.sql  002_seed.sql
src/: fraud_detector.py  oltp_loader.py  service_simulator.py
