[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.1.0",
    "apache-airflow-providers-postgres>=6.3.0",
    "clickhouse-connect>=0.9.2",
    "dotenv>=0.9.9",
    "faker>=37.8.0",
    "kafka-python>=2.2.15",
    "psycopg2-binary>=2.9.10",
    "pyspark>=4.0.1",
    "python-dotenv>=1.1.1",
]
